# ingest-pilot

./: .gitignore  CHANGELOG.md  README.md  build-mac.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  AUTO_UPDATE.md  BUILD_MACOS.md  BUILD_PLAN.md  DESIGN_DIRECTION.md  DESIGN_HANDOFF.md  SPEC.md
docs/design/: BUNDLING.md
docs/design/dark-theme/: Dark Theme Spec.dc.html  dark-theme.css  dark-theme.json
examples/: baptism-story.preset  event-recap.preset
scripts/: create-placeholder-icon.mjs  fetch-tools.ps1
src/: App.tsx  globals.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config_bundle.rs  history.rs  iconik.rs  ingest.rs  metadata_presets.rs  mod.rs  naming_catalog.rs  presets.rs  scan.rs  settings.rs  system.rs  thumbnails.rs  tokens.rs
src-tauri/src/core/: condition.rs  file_routing.rs  folder_tree.rs  hash.rs  job.rs  metadata_preset.rs  mhl.rs  mod.rs  preset.rs  storage.rs  token.rs
src-tauri/src/ingest/: copier.rs  engine.rs  metadata_manifest.rs  mod.rs  offload_proof.rs  reel_index.rs  report.rs  scanner.rs  source_thumbs.rs  verifier.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src-tauri/src/sync/: mod.rs  shared_presets.rs
src/components/: FloatingHelp.tsx  FolderTreeEditor.tsx  MetadataPresetsManager.tsx  OptionsTextField.tsx  PatternInput.tsx  PresetEditor.tsx  RecentIngestsCarousel.tsx  SelectMenu.tsx  TokenSuggest.tsx  UpdateModal.tsx  Walkthrough.tsx
src/lib/: folderTree.ts  metadataPresetFactory.ts  namingCatalog.ts  parameters.ts  presetFactory.ts  sound.ts  tauri.ts  theme.ts  tokens.ts  types.ts  updater.ts
src/mocks/: designJobState.ts  tauri-core.ts  tauri-dialog.ts  tauri-event.ts  tauri-process.ts  tauri-updater.ts  tauri-webview.ts
src/pages/: Dashboard.tsx  DitPage.tsx  HelpPage.tsx  HistoryPage.tsx  IngestConsolePreviewPage.tsx  IngestPage.tsx  MetadataPage.tsx  NamingPage.tsx  PlaceholderPage.tsx  PresetsPage.tsx  ScaffoldPage.tsx  SettingsPage.tsx
src/stores/: appStore.ts
src/styles/: index.css
