[package]
name = "ingest-pilot"
version = "0.1.7"
description = "A desktop app for repeatable project scaffolding and verified media ingest."
authors = ["Ingest Pilot"]
edition = "2021"

[lib]
name = "ingest_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
chrono = { version = "0.4", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
printpdf = "0.7"
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
